--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
 
+<!DOCTYPE html>
+<html lang="lv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="Styles/stylesheet.css" rel="stylesheet" type="text/css">
+    <title>Lamas</title>
+</head>
+
+<body>
+    <div class="grid-container">
+        <header>
+            <div class="header-title">
+                <h>Lamas</h>
+            </div>
+            <div class="top-nav">
+                <a class="bouncy" href="#home">Sākums</a>
+                <a class="bouncy" style="animation-delay:0.07s" href="#history">Vēsture</a>
+                <a class="bouncy" style="animation-delay:0.14s" href="#visual">Izskats</a>
+                <a class="bouncy" style="animation-delay:0.21s" href="#behavior">Uzvedība</a>
+            </div>
+            <div class="top-placeholder">
+                <input type="text" placeholder="Meklēt...">
+            </div>
+        </header>
+        <div class="landing-page">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque qui ea non nulla sint natus cum minus eum voluptatum. Eum eligendi cupiditate neque aliquid culpa. Adipisci modi veniam distinctio nisi?
+            </p>
+        </div>
+
+        <div class="ad">
+            <p>blablabla</p>
+        </div>
+
+        <div class="body">
+            <p>bodybodybody</p>
+        </div>
+
+        <div class="sidebar">
+            <p>Sidebar</p>
+        </div>
+
+        <footer class="footer">
+        Text?
+        </footer>
+
+    </div>
+</body>
+</html>
