--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body>
     <div class="grid-container">
         <header>
-            <div class="header-title">
-                <h>Lamas</h>
-            </div>
+            <h class="header-title">Lamas</h>
             <div class="top-nav">
                 <a class="bouncy" href="#home">Sākums</a>
                 <a class="bouncy" style="animation-delay:0.07s" href="#history">Vēsture</a>
