--- a/index.html
+++ b/index.html
@@ -5,45 +5,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="Styles/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="Styles/stylesheet2.css" rel="stylesheet" type="text/css">
     <title>Lamas</title>
 </head>
 
 <body>
-    <div class="grid-container">
-        <header>
-            <h class="header-title">Lamas</h>
-            <div class="top-nav">
-                <a class="bouncy" href="#home">Sākums</a>
-                <a class="bouncy" style="animation-delay:0.07s" href="#history">Vēsture</a>
-                <a class="bouncy" style="animation-delay:0.14s" href="#visual">Izskats</a>
-                <a class="bouncy" style="animation-delay:0.21s" href="#behavior">Uzvedība</a>
+        <header class="header">
+            <div class="header-title">
+                <img src="Styles/Images/lama-logo.png" alt="Lamas-logo" height="100">
+                <h>Lamas</h>
             </div>
+
+            <div class="top-nav">
+                <a class="button" href="#home">Sākums</a>
+                <a class="button" href="#history">Vēsture</a>
+                <a class="button" href="#visual">Izskats</a>
+                <a class="button" href="#behavior">Uzvedība</a>
+          </div>
             <div class="top-placeholder">
                 <input type="text" placeholder="Meklēt...">
             </div>
         </header>
+        
         <div class="landing-page">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque qui ea non nulla sint natus cum minus eum voluptatum. Eum eligendi cupiditate neque aliquid culpa. Adipisci modi veniam distinctio nisi?
-            </p>
+            <div class="hero-image">
+                <img class="hero-photo" src="Styles/Images/background-lama.jpg" alt="Lamas-bilde" height="300"> 
+                <div class="hero-part">
+                <a class="example_a" 
+                    href="https://kamieli.lv/dzivnieki/lamas/" target="_blank" 
+                    rel="nofollow noopener">Apskati lamas <br> jau šodien!</a>
+                </div>
+            </div>
+           
+            <div class="ad">
+                <img class="zoo" src="Styles/Images/zoo-theme.jpg" alt="Zoo-bilde" height="300">
+                <a class="zoo-banner example_a" 
+                href="https://www.rigazoo.lv/lv" target="_blank" 
+                rel="nofollow noopener">Iegādājies biļeti <br>ZOO apmeklējumam <br>internetā!</a>
+            </div>
         </div>
 
-        <div class="ad">
-            <p>blablabla</p>
-        </div>
-
-        <div class="body">
-            <p>bodybodybody</p>
-        </div>
-
-        <div class="sidebar">
-            <p>Sidebar</p>
+        <div class=body-sidebar>
+            <div class="body">
+                <p>bodybodybody</p>
+            </div>
+            <div class="sidebar">
+                <p>Sidebar</p>
+            </div>
         </div>
 
         <footer class="footer">
-        Text?
+            <div class="footer1">
+                <p>Footer 1</p>
+            </div>
+            <div class="footer2">
+                <p>Footer 2</p>
+            </div>
+            <div class="footer3">
+                <p>Footer 3</p>
+            </div>
         </footer>
 
-    </div>
+
 </body>
 </html>
