--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <a name="top"></a>
         <header class="header">
             <div class="header-title">
                 <img src="Styles/Images/lama-logo.png" alt="Lamas-logo" height="100">
@@ -19,13 +20,12 @@
             </div>
 
             <div class="top-nav">
-                <a class="button" href="#home">Sākums</a>
-                <a class="button" href="#history">Vēsture</a>
-                <a class="button" href="#visual">Izskats</a>
-                <a class="button" href="#behavior">Uzvedība</a>
+                <a class="nav-button" href="#top">Sākums</a>
+                <a class="nav-button" href="#visual">Izskats</a>
+                <a class="nav-button" href="#behavior">Uzvedība</a>
           </div>
             <div class="top-placeholder">
-                <input type="text" placeholder="Meklēt...">
+                <input type="text" placeholder="Gribu meklēt lamas...">
             </div>
         </header>
         
@@ -33,7 +33,7 @@
             <div class="hero-image">
                 <img class="hero-photo" src="Styles/Images/background-lama.jpg" alt="Lamas-bilde" height="300"> 
                 <div class="hero-part">
-                <a class="example_a" 
+                <a class="hero-poga" 
                     href="https://kamieli.lv/dzivnieki/lamas/" target="_blank" 
                     rel="nofollow noopener">Apskati lamas <br> jau šodien!</a>
                 </div>
@@ -41,7 +41,7 @@
            
             <div class="ad">
                 <img class="zoo" src="Styles/Images/zoo-theme.jpg" alt="Zoo-bilde" height="300">
-                <a class="zoo-banner example_a" 
+                <a class="hero-poga" 
                 href="https://www.rigazoo.lv/lv" target="_blank" 
                 rel="nofollow noopener">Iegādājies biļeti <br>ZOO apmeklējumam <br>internetā!</a>
             </div>
@@ -49,22 +49,87 @@
 
         <div class=body-sidebar>
             <div class="body">
-                <p>bodybodybody</p>
+                <div class="body-feature">
+                    <h2>Pirms tikšanās ar lamām - sagatavojies!</h2>
+                </div>
+                <div class="body-img">
+                    <img class="art-lama" src="Styles/Images/Art-lama.jpg" alt="Lamas-bilde" height="300">
+                </div>
+                <div class="body-text">
+                    <a name="visual"></a>
+                    <h2>Lamu izskats</h2>
+                    <p>Atšķirībā no kamieļiem, pie kuru dzimtas lamas pieder, tām nav kupra. 
+                        Lamām ir slaids ķermenis, garas kājas un kakls, īsa aste, maza galva un 
+                        lielas ausis. No visām lamu cilts sugām lama ir vislielākā. Lamas augstums 
+                        skaustā ir 109—119 cm, svars 130—180 kg. Aste īsa, apaugusi ar biezu un mīkstu 
+                        vilnu. Pēdas nelielas, ar diviem pirkstiem.
+                        <br>
+                        Lamas ir ļoti veiklas un graciozas, tās ātri un viegli kāpelē pa klinšu nogāzēm. 
+                        Īpaši spilventiņi pēdu apakšpusē soli padara mīkstu un vieglu. Šo dzīvnieku aukslējas 
+                        un zobi ir veidoti tā, ka, plūkdamas augus, lamas nebojā augu saknes.</p>
+                </div>
             </div>
+
             <div class="sidebar">
-                <p>Sidebar</p>
+                <h2>Uzzini vairāk par lamu dzīvi:</h2>
+                <ul>
+                    <li><a href="https://en.wikipedia.org/wiki/Llama" terget="_blank">Par lamām</a></li>
+                    <li><a href="https://www.britannica.com/story/whats-the-difference-between-llamas-and-alpacas" 
+                        terget="_blank">Ar ko atšķiras lama no alpakas?</a></li>
+                    <li><a href="https://unsplash.com/s/photos/llama" 
+                            terget="_blank">Vairāk kā 500 lamu foto</a></li>
+                    <li><a href="https://gifts.worldwildlife.org/gift-center/gifts/species-adoptions/llama.aspx" 
+                                terget="_blank">Adoptē savu lamu</a></li>                          
+                </ul>
             </div>
         </div>
 
+        <div class="body-2">
+            <div class="new-paragraph">
+                <div class="new-paragraph-feature">
+                    <div class="body-img-2">
+                        <img class="art-lama" src="Styles/Images/Art-lama-2.jpg" alt="Otra-lamas-bilde" height="300">
+                    </div>
+                    <div class="body-text-2">
+                        <a name="behavior"></a>
+                        <h2>Lamu uzvedība</h2>
+                        <p>Lamu dabīgais izplatības areāls ir Andu augstkalni. Kalnu pļavās aug zema zāle, 
+                            dažādi krūmi un nelieli kociņi. Klimats ir sauss, tuksnesim līdzīgs.
+                            Tās barojas ar visa veida zālaugiem un citiem augiem. Līdzīgi kā govis, 
+                            tās zāli vispirms saplūc un, nedaudz pakošļājot, norij, bet pēc tam atgremo un 
+                            vēlreiz sakošļā. Ūdeni tās patērē ļoti minimāli. Pieticība barībā un ūdens patēriņā 
+                            ir nepieciešamas īpašības, dzīvojot augstkalnos. Kad lamas ir satrauktas, tās
+                            spļaudās tāpat kā kamieļi. Tās nespļaudās ar siekalām, bet atrij pirmā kuņģa
+                            saturu un to izspļauj.
+                            <br>
+                            Lamas ir ļoti sabiedriski dzīvnieki un savstarpējās attiecības nosaka vieta 
+                            hierarhijā. Augstāk stāvoša lama mēdz spļaut uz zemāku hierarhijā esošu bara 
+                            locekli. Atrašanās vieta hierarhijā ir ļoti mainīga, tā tiek no jauna izcīnīta 
+                            un pierādīta, savstarpēji grūstoties, speroties un spļaudoties. Biežāk savas 
+                            attiecības noskaidro tēviņi. Lamas ļoti reti spļauj uz cilvēkiem. Visbiežāk 
+                            tas notiek gadījumos, ja to no mazotnes audzina ciešā kontaktā ar cilvēkiem. 
+                            Šādos gadījumos lama cilvēku uztver kā bara locekli. Lai arī lamas nepārtraukti 
+                            ir aizņemtas ar hierahijas attiecību kārtošanu, tās barā viena par otru 
+                            rūpējas un aizsargā pret ienaidniekiem. Lamas savā starpā komunicē ar 
+                            ķermeņa valodu un balsi.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+
+
         <footer class="footer">
             <div class="footer1">
-                <p>Footer 1</p>
+                <img src="Styles/Images/lama-logo.png" alt="Lamas-logo" height="50">
+                <h>Lamas</h>
             </div>
             <div class="footer2">
-                <p>Footer 2</p>
+                <a class="footer-link" href="#" terget="_blank">Jautājumi un atbildes</a>
+                <a class="footer-link" href="#" terget="_blank">Kontakti</a>
             </div>
             <div class="footer3">
-                <p>Footer 3</p>
+                <h4>Lapu izstrādāja Kristīne Briede</h4>
             </div>
         </footer>
 
