--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a name="top"></a>
+    <a id="top"></a>
         <header class="header">
             <div class="header-title">
                 <img src="Styles/Images/lama-logo.png" alt="Lamas-logo" height="100">
@@ -56,7 +56,7 @@
                     <img class="art-lama" src="Styles/Images/Art-lama.jpg" alt="Lamas-bilde" height="300">
                 </div>
                 <div class="body-text">
-                    <a name="visual"></a>
+                    <a id="visual"></a>
                     <h2>Lamu izskats</h2>
                     <p>Atšķirībā no kamieļiem, pie kuru dzimtas lamas pieder, tām nav kupra. 
                         Lamām ir slaids ķermenis, garas kājas un kakls, īsa aste, maza galva un 
@@ -73,13 +73,13 @@
             <div class="sidebar">
                 <h2>Uzzini vairāk par lamu dzīvi:</h2>
                 <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Llama" terget="_blank">Par lamām</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Llama" target="_blank">Par lamām</a></li>
                     <li><a href="https://www.britannica.com/story/whats-the-difference-between-llamas-and-alpacas" 
-                        terget="_blank">Ar ko atšķiras lama no alpakas?</a></li>
+                        target="_blank">Ar ko atšķiras lama no alpakas?</a></li>
                     <li><a href="https://unsplash.com/s/photos/llama" 
-                            terget="_blank">Vairāk kā 500 lamu foto</a></li>
+                            target="_blank">Vairāk kā 500 lamu foto</a></li>
                     <li><a href="https://gifts.worldwildlife.org/gift-center/gifts/species-adoptions/llama.aspx" 
-                                terget="_blank">Adoptē savu lamu</a></li>                          
+                                target="_blank">Adoptē savu lamu</a></li>                          
                 </ul>
             </div>
         </div>
@@ -91,7 +91,7 @@
                         <img class="art-lama" src="Styles/Images/Art-lama-2.jpg" alt="Otra-lamas-bilde" height="300">
                     </div>
                     <div class="body-text-2">
-                        <a name="behavior"></a>
+                        <a id="behavior"></a>
                         <h2>Lamu uzvedība</h2>
                         <p>Lamu dabīgais izplatības areāls ir Andu augstkalni. Kalnu pļavās aug zema zāle, 
                             dažādi krūmi un nelieli kociņi. Klimats ir sauss, tuksnesim līdzīgs.
@@ -116,7 +116,6 @@
                 </div>
             </div>
         </div>
-        </div>
 
 
         <footer class="footer">
@@ -125,8 +124,8 @@
                 <h>Lamas</h>
             </div>
             <div class="footer2">
-                <a class="footer-link" href="#" terget="_blank">Jautājumi un atbildes</a>
-                <a class="footer-link" href="#" terget="_blank">Kontakti</a>
+                <a class="footer-link" href="#" target="_blank">Jautājumi un atbildes</a>
+                <a class="footer-link" href="#" target="_blank">Kontakti</a>
             </div>
             <div class="footer3">
                 <h4>Lapu izstrādāja Kristīne Briede</h4>
