--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="Styles/stylesheet2.css" rel="stylesheet" type="text/css">
+    <link href="Styles/media_query_tablets.css" rel="stylesheet" type="text/css">
+    <link href="Styles/media_query_phones.css" rel="stylesheet" type="text/css">
     <title>Lamas</title>
 </head>
 
