--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header class="header">
             <div class="header-title">
                 <img src="Styles/Images/lama-logo.png" alt="Lamas-logo" height="100">
-                <h>Lamas</h>
+                <p>Lamas</p>
             </div>
 
             <div class="top-nav">
