--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <footer class="footer">
             <div class="footer1">
                 <img src="Styles/Images/lama-logo.png" alt="Lamas-logo" height="50">
-                <h>Lamas</h>
+                <p>Lamas</p>
             </div>
             <div class="footer2">
                 <a class="footer-link" href="#" target="_blank">Jautājumi un atbildes</a>
