--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
            
             <div class="ad">
                 <img class="zoo art-lama-landing" src="Styles/Images/zoo-theme.jpg" alt="Zoo-bilde">
+                <figcaption><i> Reklāma </i></figcaption>
                 <a class="hero-poga" 
                 href="https://www.rigazoo.lv/lv" target="_blank" 
                 rel="nofollow noopener">Iegādājies biļeti <br>ZOO apmeklējumam <br>internetā!</a>
@@ -91,6 +92,7 @@
 
                 <div class="ad-2">
                     <img class="zoo art-lama-landing" src="Styles/Images/zoo-theme.jpg" alt="Zoo-bilde">
+                    <figcaption><i> Reklāma </i></figcaption>
                     <a class="hero-poga" 
                     href="https://www.rigazoo.lv/lv" target="_blank" 
                     rel="nofollow noopener">Iegādājies biļeti ZOO apmeklējumam internetā!</a>
